--- a/assets/css/variables.scss
+++ b/assets/css/variables.scss
@@ -1,5 +1,5 @@
 /* COLOR VARIABLES */
-$background: mix($accent, #1D1E28, 2%);
+$background: mix($accent, #282a36, 2%);
 $color: white;
 $border-color: rgba(255, 255, 255, .1);
 
